--- a/ComputerSite/Shared/Elements/ElementComponent.razor
+++ b/ComputerSite/Shared/Elements/ElementComponent.razor
@@ -1,3 +1,21 @@
 ﻿<div class="card">
-
+	<div class="card m-3 cardBoxShadow">
+		<div class="card-header text-center cardHeaderStyle">
+			<h3>@Element.Name</h3>
+		</div>
+		<div class="text-center cardBodyStyle">
+			@foreach (string line in Element.Description.Split("\n"))
+			{
+				<h5>@line</h5>
+			}
+		</div>
+		@if (ShowAddButton)
+		{
+			<div class="row">
+				<div class="col">
+					<button class="btn btn-primary" @onclick="OnAddClick">Add</button>
+				</div>
+			</div>
+		}
+	</div>
 </div>
