--- a/ComputerSite/Pages/Index.razor
+++ b/ComputerSite/Pages/Index.razor
@@ -1,19 +1,26 @@
 ﻿@page "/"
 @inject ComputerSite.Repository.AvailableElementsRepository repo
 
-<div class="text-center">
-	<h1>Create your own computer</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<h1>Create your own computer</h1><br />
+		</div>
+		<div class="col-md-12 text-center">
+			<h2>Select @_seletableElement</h2>
+		</div>
+	</div>
+	<div class="row">
+		
+			@foreach (ND1.IElement el in _elements)
+			{
+				<div class="col-sm-6 col-lg-4">
+					<ComputerSite.Shared.Elements.ElementComponent
+						Element="el"
+						OnAddClick="() => _onClick(el)"
+						ShowAddButton="_showAddButton" />
+				</div>
+			}
+		
+	</div>
 </div>
-<div class="text-center">
-	<h1>Select @_seletableElement</h1>
-</div>
-<div class="row col-12 col-sm-6 col-lg-4">
-	@foreach (ND1.IElement el in _elements)
-	{
-		<ComputerSite.Shared.Elements.ElementComponent
-			Element="el"
-			OnAddClick="() => _onClick(el)"
-			ShowAddButton="_showAddButton"/>
-	}
-</div>
-
