--- a/ComputerSite/Shared/Elements/ElementComponent.razor
+++ b/ComputerSite/Shared/Elements/ElementComponent.razor
@@ -13,7 +13,7 @@
 		{
 			<div class="row">
 				<div class="col">
-					<button class="btn btn-primary" @onclick="OnAddClick">Add</button>
+					<button class="btn btn-primary col-12" @onclick="OnAddClick">Add</button>
 				</div>
 			</div>
 		}
